# soorat

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  bench-history.csv  benchmarks.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: acoustic_render.rs  animation.rs  batch.rs  bloom.wgsl  capabilities.rs  color.rs  compute.rs  debug_draw.rs  drm.rs  egui_bridge.rs  em_render.rs  environment.rs  error.rs  fluid_render.rs  gltf_loader.rs  gpu.rs  gpu_particles.rs  gpu_particles.wgsl  hdr.rs  instancing.rs  lib.rs  lights.rs  line.wgsl  lod.rs  material.rs  math_util.rs  mesh.wgsl  mesh_pipeline.rs  pbr.wgsl  pbr_material.rs  pbr_skinned.wgsl  pipeline.rs  postprocess.rs  postprocess.wgsl  primitives.rs  profiler.rs  render_graph.rs  render_target.rs  screenshot.rs  shadow.rs  (+12 more)
supply-chain/: config.toml
tests/: integration.rs
