[package]
name = "soorat"
version = "0.23.3"
edition = "2024"
license = "GPL-3.0"
description = "Soorat — GPU rendering engine for AGNOS"
homepage = "https://github.com/MacCracken/soorat"
repository = "https://github.com/MacCracken/soorat"
readme = "README.md"
documentation = "https://docs.rs/soorat"
keywords = ["rendering", "gpu", "wgpu", "graphics", "game-engine"]
categories = ["rendering", "graphics", "game-engines"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
optics = ["dep:prakash"]
ranga = ["dep:ranga"]
physics-debug = ["dep:impetus"]
fluids = ["dep:pravash"]
screenshot = ["dep:selah", "dep:uuid", "dep:chrono"]
full = ["optics", "ranga", "physics-debug", "fluids", "screenshot"]

[dependencies]
# GPU
wgpu = "24"
winit = "0.30"

# Math (hisab re-exports glam + adds transforms, projections, spatial types)
hisab = "0.22"

# Core
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optics / color science (optional)
prakash = { version = "0.23", optional = true, features = ["spectral", "pbr"] }

# Image processing (optional — ranga pixel buffer integration)
ranga = { version = "0.21", optional = true }

# Physics debug rendering (optional — impetus collider wireframes)
impetus = { version = "0.23", optional = true }

# Fluid dynamics rendering (optional — pravash particle/surface visualization, not yet on crates.io)
pravash = { path = "../pravash", optional = true, features = ["sph", "shallow"] }

# Screenshot capture, annotation, and redaction (optional — selah integration)
selah = { version = "0.24", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# 3D model loading
gltf = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
pollster = "0.4"

[[bench]]
name = "benchmarks"
harness = false
