[package]
name = "soorat"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Soorat — GPU rendering engine for AGNOS"
homepage = "https://github.com/MacCracken/soorat"
repository = "https://github.com/MacCracken/soorat"
readme = "README.md"
documentation = "https://docs.rs/soorat"
keywords = ["rendering", "gpu", "wgpu", "graphics", "game-engine"]
categories = ["rendering", "graphics", "game-engines"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
optics = ["dep:prakash"]
ranga = ["dep:ranga"]
physics-debug = ["dep:impetus"]
fluids = ["dep:pravash"]
acoustics = ["dep:goonj"]
em = ["dep:bijli"]
thermo = ["dep:ushma"]
screenshot = ["dep:selah", "dep:uuid", "dep:chrono"]
drm = ["dep:agnosys"]
full = ["optics", "ranga", "physics-debug", "fluids", "acoustics", "em", "thermo", "screenshot"]

[dependencies]
# GPU foundation (mabda owns the wgpu lifecycle, buffers, pipelines, textures)
mabda = { version = "1", features = ["full"] }
wgpu = "29"
winit = "0.30"

# Math (hisab re-exports glam + adds transforms, projections, spatial types)
hisab = "1.1"

# Core
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optics / color science (optional)
prakash = { version = "1", optional = true, features = ["spectral", "pbr"] }

# Image processing (optional — ranga pixel buffer integration)
ranga = { version = "0.29", optional = true }

# Physics debug rendering (optional — impetus collider wireframes)
impetus = { version = "1", optional = true }

# Fluid dynamics rendering (optional — pravash particle/surface visualization)
pravash = { version = "1", optional = true, features = ["sph", "shallow"] }

# Acoustic visualization (optional — goonj ray paths, pressure maps, directivity)
goonj = { version = "1", optional = true, features = ["soorat-compat"] }

# Electromagnetism visualization (optional — bijli FDTD, field lines, charges)
bijli = { version = "1", optional = true, features = ["soorat-compat"] }

# Thermodynamics visualization (optional — ushma thermal grids, cycles, flux)
ushma = { version = "1", optional = true, features = ["soorat-compat"] }

# Screenshot capture, annotation, and redaction (optional — selah integration)
selah = { version = "0.29", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }

# DRM device info (optional — Linux-only, agnosys kernel interface)
# crates.io publish strips this dep — AGNOS builds use git/path directly
agnosys = { git = "https://github.com/MacCracken/agnosys", tag = "0.25.3", features = ["drm"], optional = true }

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# 3D model loading
gltf = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
pollster = "0.4"

[[bench]]
name = "benchmarks"
harness = false
